[gd_scene load_steps=3 format=3 uid="uid://db4x7trxrqqyw"]

[ext_resource type="Script" uid="uid://brohu5xhbreff" path="res://Script/Interaction/VideoManager/video_manager.gd" id="1_mk5ur"]
[ext_resource type="Texture2D" uid="uid://ram13ajy4b50" path="res://Scene/Interaction/VideoManager/progress_bar.png" id="2_0bhcq"]

[node name="VideoManager" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mk5ur")

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
scale = Vector2(0.6, 0.6)

[node name="SkipLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -57.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Hold Esc to skip"

[node name="ClockwiseProgress" type="TextureProgressBar" parent="SkipLabel"]
layout_mode = 0
offset_left = 52.0
offset_top = -13.0
offset_right = 265.0
offset_bottom = 157.0
scale = Vector2(0.45, 0.4)
fill_mode = 5
texture_progress = ExtResource("2_0bhcq")
tint_progress = Color(0, 0.564706, 0, 1)
